# LC_LD2410S

./: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml  library.json
include/: lc_ld2410s.h  lc_ld2410s_events.h
src/: lc_ld2410s.cpp  lc_ld2410s_common.cpp  lc_ld2410s_generic_config.cpp  lc_ld2410s_serial_number.cpp  lc_ld2410s_threshold_auto.cpp  lc_ld2410s_threshold_hold.cpp  lc_ld2410s_threshold_trigger.cpp
